Fix publications cutoff by making h2 selector more specific
Changed .about h2 to .about > article > h2 to avoid affecting
h2 elements inside nested components like publications.
Also removed display: inline-block which caused layout issues.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -295,14 +295,13 @@ ul.task-list input[type="checkbox"] {
 
 // Section headers on about page
 .about {
-  h2 {
+  > article > h2 {
     color: var(--global-text-color);
     font-size: 1.5rem;
     margin-top: 2.5rem;
     margin-bottom: 1rem;
     padding-bottom: 0.5rem;
     border-bottom: 2px solid var(--global-theme-color);
-    display: inline-block;
   }
 }
 
